# VertexLab

./: .gitignore  CMakeLists.txt  api_readme.md  primitive-readme.md  readme.md  vertexlabwindow.cpp  vertexlabwindow.h  vertexlabwindow.ui
3d/: MyBottleTool.cpp  MyBottleTool.h  MyEdgeTool.cpp  MyEdgeTool.h  MyRotationObjectTool.cpp  MyRotationObjectTool.h  MySurfaceTool.cpp  MySurfaceTool.h  MyVertexTool.cpp  MyVertexTool.h
header/: AdaptorCurve2d_AIS.h  AdaptorCurve_AIS.h  AdaptorPnt2d_AIS.h  AdaptorVec_AIS.h  ApplicationCommonWindow.h  BaseSample.h  CommonSample.h  DataExchangeSamples.h  DialogTransparency.h  DocumentCommon.h  GeomWidget.h  GeometrySamples.h  OcafSamples.h  OcctHighlighter.h  OcctWindow.h  Sample2D_Face.h  Sample2D_Image.h  Sample2D_Markers.h  TOcafFunction_BoxDriver.h  TOcafFunction_CutDriver.h  TOcafFunction_CylDriver.h  TopologySamples.h  TranslateDialog.h  TriangulationSamples.h  View.h  Viewer2dSamples.h  Viewer3dSamples.h
res/: DataExchange.xml  Ocaf.xml  VertexLab.conf  VertexLab.qrc
source/: AdaptorCurve2d_AIS.cxx  AdaptorCurve_AIS.cxx  AdaptorPnt2d_AIS.cxx  AdaptorVec_AIS.cxx  ApplicationCommonWindow.cxx  BaseSample.cxx  DataExchangeSamples.cxx  DialogTransparency.cxx  DocumentCommon.cxx  GeomWidget.cxx  GeometrySamples.cxx  OcafSamples.cxx  OcctHighlighter.cxx  OcctWindow.cxx  Sample2D_Face.cxx  Sample2D_Image.cxx  Sample2D_Markers.cxx  TOcafFunction_BoxDriver.cxx  TOcafFunction_CutDriver.cxx  TOcafFunction_CylDriver.cxx  TOcaf_Application.cxx  TopologySamples.cxx  TranslateDialog.cxx  TriangulationSamples.cxx  View.cxx  Viewer2dSamples.cxx  Viewer3dSamples.cxx  main.cxx
